--- a/WebXslt/src/main/webapp/static/css/default.css
+++ b/WebXslt/src/main/webapp/static/css/default.css
@@ -1,7 +1,16 @@
+/*
+	Color scheme:
+		dark blue   #210085
+		light blue: #A385FF
+*/
+
+body {
+	font-family: verdana;
+}
 
 div.content {
 	width: 800px;
-	padding: 0px 20px 20px 20px;
+	padding: 20px;
 	border: 1px solid grey;
 	margin: auto;
 }
@@ -10,24 +19,51 @@ div.tableWrapper {
 	margin-bottom: 35px;
 }
 
-table.dataTable {
+table {
 	border-spacing: 0;
 	border-collapse: collapse;
+	text-align: center;
 }
 
-div.buttonz {
+th {
+	padding: 1px 6px;
+	border-bottom: 2px solid #210085;
+}
+
+td {
+	padding: 5px 1px;
+	border-bottom: 1px solid #A385FF;
+}
+
+tr.odd {
+	background-color: grey;
+}
+
+td.center {
+	text-align: center;
+}
+
+div.buttons {
 	display: block;
 	clear: both;
 	padding: 10px 0px 10px 0px;
+	font-size: .8em;
 }
 
 a.button {
 	display: inline;
 	border: 2px inset #CCCCCC;
 	border-radius: 8px;
-	padding: 5px 10px 5px 10px;
+	padding: 3px;
+	margin-right: 4px;
+	background-color: #A385FF;
 }
 
-td.center {
-	text-align: center;
+a.button {
+	color: white;
+	text-decoration: none;
+}
+
+a.button:hover {
+	text-decoration: underline;
 }
