Updates to enable display of contact-update.xsl.

--- a/WebXslt/src/main/webapp/static/css/default.css
+++ b/WebXslt/src/main/webapp/static/css/default.css
@@ -67,3 +67,18 @@ a.button {
 a.button:hover {
 	text-decoration: underline;
 }
+
+label {
+	display: inline-block;
+	float: left;
+	clear: left;
+	width: 200px;
+	text-align: right;
+}
+
+input {
+	display: inline-block;
+	float: left;
+	margin-left: 10px;
+}
+
